--- a/ClientApp/src/components/Css/RightBlock.css
+++ b/ClientApp/src/components/Css/RightBlock.css
@@ -1,14 +1,14 @@
 ﻿#RightBlock {
     height: 1920px;
     width: 100%;
-    padding: 0px;
-    background-color: rebeccapurple;
+    padding: 0px;    
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    background: -webkit-linear-gradient(right, rgb(196 5 199), rgb(6 20 52));
 }
 
 #MainRightBlock {
-    padding: 30%;
+    padding: 30%;    
 }
 
 h1 {
@@ -68,4 +68,17 @@ h1 {
 
 .btn-primary {
     background-color:aqua;
+}
+
+#CloseButton {
+    text-align: left;
+    display: inline-block;
+    width: 50px;
+    position: unset;
+    position: relative;
+    height: 50px;
+}
+
+#ModalMessage {
+    visibility: hidden;
 }
