--- a/ClientApp/src/components/Css/LeftBlock.css
+++ b/ClientApp/src/components/Css/LeftBlock.css
@@ -89,17 +89,59 @@ span {
     align-content: flex-end;
 }
 
+#colLeft {
+    opacity: 60%;
+    position: relative;
+    padding-top: 150 px;
+    text-align: -webkit-center;
+}
 
 #InputTable {
     padding: 10px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
+    text-align: center;
     position: relative;
+    display: block;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    border: 20px solid #ffffff;
-    background: #d9dbda;
-    margin: 10px;
-    padding-left: 500px;
+    border: 10px solid #a36ccb;
+    background: #ffffff;
+    border-radius: 50px;
+    margin: 10px;    
+}
+
+.btn-primary {
+    background-image: linear-gradient(to bottom, #0f1122 0%, #700d75 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff265a88', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+    background-repeat: repeat-x;
+    border-color: #245580;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555555;
+    background-color: #fff;
+    background-image: none;
+    border: 0px solid #980df5;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
 }
