--- a/ClientApp/src/components/Css/RightBlock.css
+++ b/ClientApp/src/components/Css/RightBlock.css
@@ -82,3 +82,46 @@ h1 {
 #ModalMessage {
     visibility: hidden;
 }
+
+#LoadingIcon {
+    visibility: hidden;
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    position: relative;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes example {
+    0% {
+        background-color: red;
+        left: 0px;
+        top: 0px;
+    }
+
+    25% {
+        background-color: yellow;
+        left: 200px;
+        top: 0px;
+    }
+
+    50% {
+        background-color: blue;
+        left: 200px;
+        top: 200px;
+    }
+
+    75% {
+        background-color: green;
+        left: 0px;
+        top: 200px;
+    }
+
+    100% {
+        background-color: red;
+        left: 0px;
+        top: 0px;
+    }
+}
