Adding Initial Page and Routing
- Added Initial LoggedIn Page
- Alteration of CSS
- Insertion of NavBar and Footer
- Added New CSS

--- a/ClientApp/src/components/Css/App.css
+++ b/ClientApp/src/components/Css/App.css
@@ -1,4 +1,8 @@
-﻿.row > * {
+﻿body {
+    overflow-x: clip;
+    overflow-y: clip;
+}
+.row > * {
     padding: 0px;
     padding-right: 0px;
     padding-left: 0px;
