--- a/ClientApp/src/components/Css/LeftBlock.css
+++ b/ClientApp/src/components/Css/LeftBlock.css
@@ -6,8 +6,10 @@
     height: 1920px;
     width: 100%;
     background-image: url("../../images/Atoms_Background.jpeg");
+    background-size:contain;
     text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;    
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;  
+    overflow: hidden;
 }
 
 #RegistrationBlock {    
@@ -72,7 +74,7 @@ table {
 tr {
     display: inline-flex;
 }
-th {
+.Data {
     text-align: left;
     position: relative;
     display: inline-grid;
