--- a/ClientApp/src/components/Css/RightBlock.css
+++ b/ClientApp/src/components/Css/RightBlock.css
@@ -5,6 +5,7 @@
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     background: -webkit-linear-gradient(right, rgb(196 5 199), rgb(6 20 52));
+    overflow: hidden;
 }
 
 #MainRightBlock {
